Fixed horizontal scroll issue with "Question" component

--- a/src/Components/Question/Question.scss
+++ b/src/Components/Question/Question.scss
@@ -2,7 +2,7 @@
 
 .question {
   height: 100vh;
-  width: 100vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
